# bunyang_longtail

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run.py
docs/: ARCHITECTURE_V2.md  AUCTION_KEYWORD_RESEARCH.md  LOAN_DOMAIN_DESIGN.md  SESSION_HANDOFF.md  TAX_DOMAIN_DESIGN.md  TERMINAL_WEB_SESSION.md  blog_decision_check_contract.md  schema_v2.sql
scripts/: backfill_lead_cta_to_naver.py  cleanup_published_media.py  generate_publish_image.py  gpt_web_session.py  gpt_web_session_daemon.py  monitor_longtail_publish.py  publish_bundle_to_naver.py  run_bundle_cdp.sh  run_curriculum_daily_publish_prod.sh  run_longtail_publish_prod.sh
src/bunyang_longtail/: __init__.py  article_quality.py  asset_retention.py  catalog.py  cli.py  codex_cli.py  config.py  cron_publish.py  curriculum.py  curriculum_hub_publish.py  database.py  gpt_web.py  humanize_style.py  keyword_boost_adapter.py  local_image_fallback.py  naver_bundle_publish.py  openai_compat.py  planner.py  prompt_builder.py  workers.py
tests/: test_asset_retention.py  test_keyword_boost.py  test_longtail.py  test_naver_bundle_publish.py
